--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { version = "0.2", features = ["full"] }
 futures = "0.3"
 telegram-bot = "0.7"
 chrono = "0.4"
+log = "0.4"
+pretty_env_logger = "0.4.0"
