--- a/Dockerfile.armv6
+++ b/Dockerfile.armv6
@@ -1,12 +1,23 @@
-FROM arm32v7/rust:1.31 as builder
+FROM arm32v6/alpine as builder
 
+# Install build deps
+RUN apk add --no-cache \
+    'cargo=1.39.0-r0' \
+    'openssl-dev=1.1.1d-r3'
+
+# Build app
 WORKDIR /usr/src/myapp
 COPY . .
 RUN cargo build --release
 
 
-FROM arm32v6/alpine:3.7
+FROM arm32v6/alpine
 
+# Install runtime deps
+RUN apk add --no-cache \
+    'openssl-dev=1.1.1d-r3'
+
+# Copy binary
 COPY --from=builder /usr/src/myapp/target/release/quadsbot /quadsbot
 
 CMD ["/quadsbot"]
