Set timezone to London

--- a/Dockerfile.armv6
+++ b/Dockerfile.armv6
@@ -16,7 +16,11 @@ FROM arm32v6/alpine
 # Install runtime deps
 RUN apk add --no-cache \
     'openssl-dev=1.1.1d-r3' \
-    'libgcc=9.2.0-r4'
+    'libgcc=9.2.0-r4' \
+    'tzdata=2019c-r0'
+
+# Set timezone to BST
+ENV TZ Europe/London
 
 # Copy binary
 COPY --from=builder /usr/src/myapp/target/release/quadsbot /quadsbot
