--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.2", features = ["full"] }
-futures = "0.3"
-telegram-bot = "0.7"
 chrono = "0.4"
 log = "0.4"
-pretty_env_logger = "0.4.0"
+env_logger = { version = "0.7", default-features = false, features = ["atty", "humantime"] }
+telegram = { path = "./telegram" }
 
-[profile.release]
-codegen-units=1
+[dev-dependencies]
+json = "0.12"
+
+[workspace]
+members = ["telegram"]
