--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,3 @@
-# Ignore everything
-*
-
-# Allow files and directories
-!/Cargo.toml
-!/Cargo.lock
-!/src/**
-
+# Ignore target and git directories
+target
+.git
