--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 python-telegram-bot = "^13.11"
+pytz = "^2022.1"
 
 [tool.poetry.dev-dependencies]
 
