--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]
 python = "^3.10"
 python-telegram-bot = "^13.11"
 pytz = "^2022.1"
+timezonefinder = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 
